creusot/tests/should_fail/bug/436.stderr
error[creusot]: called Logic function in Ghost context "creusot_contracts::__stubs::fin"
  --> 436.rs:10:5
   |
10 |     pearlite! { *(^x).g }
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `pearlite` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

